TICKER CHANGES: - Default to open - extra padding on top and bottom - make sure the ticker is not on the bottom - Updated webpack stuff - Uninstalled lots of dependencies

--- a/packages/homepage-ticker/src/ticker.scss
+++ b/packages/homepage-ticker/src/ticker.scss
@@ -32,6 +32,7 @@ $warningYellow: #f5a623;
 
 .ticker-toggle-wrapper {
   margin: auto; // centers element horizontally
+  padding: 0.5em 0; // extra padding on the top and bottom
 
   width: fit-content;
   height: fit-content;
@@ -100,13 +101,12 @@ $warningYellow: #f5a623;
 }
 
 .ticker-wrap {
-  position: absolute;
-  bottom: 0;
-  left: 0;
-  width: 100%;
+  // fill 100% of the viewport
+  width: 100vw;
+  margin-left: calc(-50vw + 50%);
+
   overflow: hidden;
   height: 4rem;
-  padding-left: 100%;
   box-sizing: content-box;
 
   background-color: #ffffff96;
@@ -116,7 +116,7 @@ $warningYellow: #f5a623;
     height: 4rem;
     line-height: 4rem;
     white-space: nowrap;
-    padding-right: 100%;
+    padding-left: 100%;
     box-sizing: content-box;
 
     -webkit-animation-iteration-count: infinite;
